force-app/main/default/objects/Exchange_Rate__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <description>Codigo de la moneda</description>
    <label>Currency Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>