force-app/main/default/objects/Exchange_Rate__c/fields/Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Date__c</fullName>
    <description>Fecha del tipo de cambio</description>
    <label>Exchange Date</label>
    <type>Date</type>
</CustomField>