force-app/main/default/objects/Exchange_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>tasa de cambio tomando al euro como referencia</description>
    <label>Rate</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>