force-app/main/default/objects/Exchange_Rate__c/fields/Rate_Euro_Currency__c.field-meta.xml
<CustomField>
    <fullName>Rate_Euro_Currency__c</fullName>
    <description>Exchange rate from euro to currency  . 1 euro to currency</description>
    <label>Currency to Euro</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>